# pmo

./: AGENTS.md  LICENSE  README.md  dev.md  main.py  pmo.yml  pyproject.toml  test.md
.github/workflows/: publish.yml
docs/: dev.md  test.md
examples/: dotenv-example.yml  extends.yml  log-merged-example.yml  long-commands.yml  simple.yml  var-cmd.yml
pmo/: __init__.py  cli.py  logs.py  service.py  util.py
servly/: __init__.py  cli.py  logs.py  service.py
tests/: conftest.py  test_advanced.py  test_cli.py  test_config.py  test_extends.py  test_integration.py  test_logs.py  test_process_monitoring.py  test_service_management.py  test_util.py
xm/: cli.py
