[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pmo"
version = "0.3.18"
description = "simple process manager"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "simpxx", email = "simpxx@gmail.com"}
]
keywords = ["command-line", "tool"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "freezegun>=1.5.1",
    "psutil>=7.0.0",
    "pynvml>=12.0.0",
    "python-dotenv>=1.1.0",
    "pyyaml>=6.0.2",
    "rich>=14.0.0",
]

[project.scripts]
pmo = "pmo.cli:main"

[tool.setuptools.packages.find]
include = ["pmo*"]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "twine>=6.1.0",
]
